--- a/myshops 1k/12.html
+++ b/myshops 1k/12.html
@@ -162,6 +162,60 @@
                 </div>
             </div>
 
+            <div class="main" style="padding-top: 13px;">
+                <div class="title">
+                    <h5 style="font-size: 18px;">Acer NX.HZRER.015 ( ACER A315-57G-57FO</h5>
+                </div>
+                <div class="specifications">
+                    <ul>
+                        <li style="font-size: 16px;">Ekran: 15.6" FHD</li>
+                        <li>Yaddaş: 256 GB</li>
+                        <li>RAM: 8 GB</li>
+                        <li style="font-size: 16px;">GPU: NVIDIA GeForce® MX330 2 GB</li>
+                        <li>CPU: Intel® Core™ i5-1035G1</li>
+                    </ul>
+                </div>
+                <div class="installment-price" style="display: flex;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">116.58</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 22px;">1399</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 22px;">
+                <div class="title">
+                    <h5 style="font-size: 18px;">Acer NX.HZRER.015 ( ACER A315-57G-57FO</h5>
+                </div>
+                <div class="specifications">
+                    <ul>
+                        <li style="font-size: 16px;">Ekran: 15.6" FHD</li>
+                        <li>Yaddaş: 256 GB</li>
+                        <li>RAM: 4 GB</li>
+                        <li style="font-size: 16px;">GPU: Intel UHD Graphics</li>
+                        <li>CPU: Intel® Core™ i3-1005G1</li>
+                    </ul>
+                </div>
+                <div class="installment-price" style="display: flex;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">99.92</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 22px;">1199</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
             
         </div>
     </div>
