--- a/myshops 1k/mix.html
+++ b/myshops 1k/mix.html
@@ -88,7 +88,7 @@
 <body>
     <div class="containerr">
         <div class="row">
-            <!-- <div class="main">
+            <div class="main">
                 <div class="title">
                     <h5>BEURER </h5>
                 </div>
@@ -192,7 +192,7 @@
                         <li>Revers sistemi:  Var</li>
                         <li>Korpus materialı: Plastik</li>
                         <li>Rəng: Ağ</li>
-                        <li>Istehsalçı ölkə : Çin</li>
+                        <li>Istehsalçı ölkə: Çin</li>
                     </ul>
                 </div>
                 <div class="installment-price" style="display: flex;">
@@ -240,7 +240,7 @@
                 <div class="title">
                     <h5>Bosch</h5>
                 </div>
-                <div class="model">
+                <div class="model">tv
                     <p>MMR08A1</p>
                 </div>
                 <div class="specifications">
@@ -2135,7 +2135,7 @@
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div> 
-            </div> -->
+            </div>
 
             <div class="main">
                 <div class="title">
