--- a/myshops 1k/12.html
+++ b/myshops 1k/12.html
@@ -209,7 +209,7 @@
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 22px;">1199</span>
+                    <span class="esas-price" style="margin-right: 4px; ;">1199</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
