--- a/myshops 1k/mix.html
+++ b/myshops 1k/mix.html
@@ -2230,6 +2230,36 @@
                 </div> 
             </div>
 
+            <div class="main">
+                <div class="title">
+                    <h5>Xiaomi</h5>
+                </div>
+                <div class="model">
+                    <p>S7</p>
+                </div>
+                <div class="specifications">
+                    <ul>
+                        <li>Növü: Tozsoran</li>
+                        <li>İstehlak  gücü: 58 WT</li>
+                        <li>Sorma gücü: 40</li>
+                        <li>Filtir növü:  Hepa 13</li>
+                        <li>Korpus materialı: plastik</li>
+                        <li>Istehsalçı ölkə: Çin</li>
+                    </ul>
+                </div>
+                <div class="installment-price" style="display: flex;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">108.25</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price">
+                    <span class="esas-price" style="margin-right: 4px;">1299</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+
         </div>
     </div>
 </body>
